# zsxq-stock-report

./: .gitignore  adaptive_weights.py  attachment_processor.py  auth.py  backtester.py  benchmark.py  config.example.yaml  config.yaml  consecutive_limit_up.py  crawler.py  dashboard.py  email_sender.py  extractor.py  factor_research.py  intraday_monitor.py  main.py  market_regime.py  market_review.py  paper_trader.py  pdf_generator.py  performance_tracker.py  portfolio_builder.py  premarket_briefing.py  price_fetcher.py  pyproject.toml  requirements.txt  research.py  sector_monitor.py  stock_extractor.py  storage.py  summarizer.py  ths_sync.py
.claude/: settings.local.json
.github/workflows/: consecutive-limit-up.yml  daily-report.yml  intraday-monitor.yml  market-review.yml  premarket-briefing.yml  stock-dashboard.yml
.mimocode/command/: update-zsxq-cookie.md
.mimocode/skills/gh-actions-cron/: SKILL.md
.wolf/: anatomy.md  buglog.json  cerebrum.md  identity.md  memory.md  token-ledger.json
.wolf/hooks/: _session.json
scripts/: build_dashboard.py  daily_run.sh
templates/: index.html
tests/: test_portfolio_builder.py  test_stock_extractor.py
